2003-09-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
        * src/services/components/ogre/: Console.cpp, InputManager.cpp:
	Cleanup of traces. Added F11 to write the slash.
	* AUTHORS: removed Razor123. To the extent of my knowledge
	this person didn't contribute any code to Dime.
	Razor123 is of course welcomed into the Dime team, and when he
	contributes actual code he'll be restored as author.

2003-09-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/components/ogre/: Makefile.am,
	Console.(h|cpp), InputManager.(h|cpp), DimeOgre.cpp:
	Added InputManager and Console from Die (thanks to 
	wolfman8k). 
	Press ~ or F12 to show the console. The console is not 
	funtional yet (to be done ASAP).
	As keyboard controls are disabled atm, the program
	exits after 600 rendered frames.
	* configure.ac: added /user/local/lib/Ogre/Plugin_GuiElements.so
	to LDFLAGS. This is harcoded and an ugly hack, but I don't know
	if Ogre has a way to add Plugin so's with the autotools.

2003-10-25 Lee Begg <llnz@paradise.net.nz>
	* src/services/sound/SoundService.(h|cpp): Made SoundService a bit
	more generic. Removed most includes from header.

2003-10-23 Lee Begg <llnz@paradise.net.nz>
	* configure.ac: moved some of the tests around, made it a bit nicer
	Now defines HAVE_LIB* when it finds a library (not all checks do)
	* src/services/DimeServices.(h|cpp): moved code the cpp, removed
	includes from h.  Updated other files as necessary

2003-10-20 Eric Sandall <eric [at] sandall [dot] us>
	* README: Typo in media filenames

2003-10-19 Eric Sandall <eric [at] sandall [dot] us>
	* src/main/states.xml:11-14: Too many levels of regression
	even though I tested it...
	* README: Moved the media to somewhere with more bandwidth ;),
	fixed typo in the filenames.

2003-10-18 Eric Sandall <eric [at] sandall [dot] us>
	* src/services/gui/widget/Console.cpp:39,41: Fonts are located in dime/media/fonts